--- a/app/src/main/res/layout/lista_category.xml
+++ b/app/src/main/res/layout/lista_category.xml
@@ -19,14 +19,13 @@
         >
 
         <TextView
-            android:id="@+id/txtEmail"
+            android:id="@+id/txtName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            tools:text="EMAIL"
             android:textColor="@color/text"
-            android:textStyle="bold"
             android:textSize="19sp"
-            />
+            android:textStyle="bold"
+            tools:text="NAME" />
 
         <View
             android:id="@+id/divider"
@@ -43,24 +42,7 @@
             android:layout_marginBottom="10dp"
             />
 
-        <TextView
-            android:id="@+id/txtName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="John"
-            android:textColor="@color/text"
-            android:textSize="20dp" />
 
-        <TextView
-            android:id="@+id/txtRole"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:text="Administrador"
-            android:textAllCaps="true"
-            android:textColor="@color/text"
-            android:textSize="20dp" />
 
     </LinearLayout>
 </androidx.cardview.widget.CardView>
