--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -72,6 +73,7 @@
 
     </LinearLayout>
 
+
     <!-- Boton y Registro -->
     <LinearLayout
         android:layout_width="match_parent"
@@ -88,20 +90,11 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
+            android:layout_marginBottom="40dp"
             android:backgroundTint="@color/accent"
             android:text="INICIAR SESION"
             android:textColor="@color/text"
             android:background="@drawable/rounded_button" />
-
-        <!-- Registro Usuario -->
-        <TextView
-            android:id="@+id/btnRegister"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:layout_marginBottom="20dp"
-            android:text="Deseas Registrarte ?"
-            android:textColor="@color/divider"/>
 
     </LinearLayout>
 
