--- a/app/src/main/res/layout/activity_product.xml
+++ b/app/src/main/res/layout/activity_product.xml
@@ -7,25 +7,23 @@
     android:background="@color/dark"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".activity.UserActivity">
+    tools:context=".activity.ProductActivity">
 
-    <!--Mostramos el primer RecyclerView de Canales-->
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp"
         android:layout_marginVertical="44dp"
-        android:text="@string/tltCategoria"
+        android:text="@string/tltProducto"
         android:textAllCaps="true"
         android:textColor="@color/white"
         android:textSize="35sp"
         android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/rvCategoria"
+        android:id="@+id/rvProducto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="32dp" />
-
 
 </androidx.appcompat.widget.LinearLayoutCompat>
