--- a/app/src/main/res/layout/lista_product.xml
+++ b/app/src/main/res/layout/lista_product.xml
@@ -42,6 +42,15 @@
             android:layout_marginBottom="10dp"
             />
 
+        <TextView
+            android:id="@+id/txtPrice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/text"
+            android:textSize="19sp"
+            android:textStyle="bold"
+            tools:text="NAME" />
+
 
 
     </LinearLayout>
